# jaxprop

./: .buildinfo  .bumpversion.cfg  .gitignore  README.md  environment.yaml  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  tmp_bicubic_diag.py
.doctrees/: environment.pickle  index.doctree
.doctrees/source/: bibliography.doctree  installation.doctree
.github/workflows/: deploy_docs.yaml  publish_to_pypi.yaml
_modules/: index.html
_modules/coolpropx/: core_calculations.html  fluid_properties.html  graphics.html  math.html  utils.html
_modules/jaxprop/: graphics.html  helpers_coolprop.html  helpers_jax.html  helpers_props.html  math.html  utils.html
_sources/: index.rst
_static/: documentation_options.js
coolpropx/: __init__.py  core_calculations.py  fluid_properties.py  jax_import.py  math.py  utils.py
coolpropx/CoolProp_test/: demo_coolprop_jax.py  demo_coolprop_jax2.py  demo_coolprop_jax4.py
coolpropx/Lookup_tables/: interpolation_table.pkl  plot_interpolated_coolprop_comparison.py  plot_interpolated_der_FDinterp.py  plot_property_surface.py  property_table.csv  property_table.parquet  property_table_10.csv  property_table_10.parquet  property_table_120.parquet  property_table_50.csv  property_table_50.parquet  property_table_80.csv  property_table_80.parquet  raw_property_grids.pkl
coolpropx/bicubic/: bicubic_interpolant_property.py  generate_lookup_table.py  generate_lookup_table_1.py  generate_lookup_table_v2.py  generate_tables.py  jax_bicubic_HEOS_interpolation_1.py  plot_interpolated_der_FDcoolprop.py  plot_interpolated_midpoint_coolprop_comparison.py  plot_interpolated_rawgrid_comparison.py
coolpropx/jaxprop/: jaxprop.py  (+1 more)
docs/: build_docs.py  conf.py  index.rst
examples/: basic_calculations.py  contour_pressure.py  property_contour.py  solver_equilibrium.py  solver_metastable.py  subcoling_superheating.py
jaxprop/: __init__.py  fluid_properties.py  helpers_coolprop.py  helpers_jax.py  helpers_props.py  jax_import.py  math.py
source/: bibliography.html  installation.html
tests/: pytest.ini  run_tests.py  test_bicubic_accuracy.py  test_bicubic_consistency.py  test_custom_solvers.py  test_default_solver.py  test_default_solvers.py  test_example_cases.py  test_helmholtz_eos.py  test_helmholtz_evaluation.py  test_perfect_gas_eos.py  test_phase_diagrams.py  test_property_solvers.py  test_solvers_coolprop.py  test_solvers_equilibrium.py  test_solvers_metastable.py  test_spinodal_calculation.py  utilities.py
(+312 files in other folders)
